--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sectionTop {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px
+}
+
+.sectionTop h1 {
+  font-size: 24px;
+  font-weight: 700;
+}
+.sectionTop h2 {
+  font-size: 24px;
+    font-weight: 500;
+    line-height: 24px;
+}
+.sectionTop a {
+  padding: 6px 10px;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  column-gap: 10px;
+  color: #000;
+  background-color: #25D366;
+  font-size: 16px;
+  font-weight: 800;
+  border-radius: 10px;
+  width: 310px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 767px) {
+  .sectionTop h1 {
+    font-size: 22px;
+    font-weight: 700;
+    text-align: center;
   }
 }
